--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="box-container">
     <section class="box-grid">
+        <h1>Ariel Tordai</h1>
         <div class="box">
         </div>
         <div class="box">
@@ -105,6 +110,7 @@
         </div>
         <div class="box">
         </div>
-    </section></div>
+    </section>
+</div>
 </body>
 </html>
