--- a/index.html
+++ b/index.html
@@ -1,116 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="box-container">
-    <section class="box-grid">
-        <h1>Ariel Tordai</h1>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-    </section>
-</div>
+<table id="films">
+    <tr>
+        <th colspan="3">Films</th>
+    </tr>
+    <tr>
+        <td>The Beggar and the Thief (2019)</td>
+        <td>Lead (Ian)</td>
+        <td>Universial Pictures</td>
+    </tr>
+    <tr>
+        <td>Zombies, Get Me Outta Here! (2018)</td>
+        <td>Supporting (Jim)</td>
+        <td>Focus Features</td>
+    </tr>
+    <tr>
+        <td>Colgate Commersial (2016)</td>
+        <td>Extra (Dad in park)</td>
+        <td>Space City
+            Hosting</td>
+    </tr>
+    <tr>
+        <td>Protein Pro (2002)</td>
+        <td>Co-presenter</td>
+        <td>TV-Shop</td>
+    </tr>
+</table>
 </body>
 </html>
