--- a/index.html
+++ b/index.html
@@ -10,31 +10,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<table id="films">
-    <tr>
-        <th colspan="3">Films</th>
-    </tr>
-    <tr>
-        <td>The Beggar and the Thief (2019)</td>
-        <td>Lead (Ian)</td>
-        <td>Universial Pictures</td>
-    </tr>
-    <tr>
-        <td>Zombies, Get Me Outta Here! (2018)</td>
-        <td>Supporting (Jim)</td>
-        <td>Focus Features</td>
-    </tr>
-    <tr>
-        <td>Colgate Commersial (2016)</td>
-        <td>Extra (Dad in park)</td>
-        <td>Space City
-            Hosting</td>
-    </tr>
-    <tr>
-        <td>Protein Pro (2002)</td>
-        <td>Co-presenter</td>
-        <td>TV-Shop</td>
-    </tr>
-</table>
+
+<div class="testimonial">
+    <img class="testimonial_image" src="images/Person1.png" alt="Picture of a girl smiling behind a watermelon">
+    <p><span class="testimonial_signature">Chris Fox.</span>CEO at Mighty Schools.</p>
+    <blockquote class="testimonial_quote">William knocked it out of the park with his performance at our last event. Some of our clients actually think they got to meet the real mr. Pitt and our sales has skyrocketed since.</blockquote>
+</div>
+
+<div class="testimonial">
+    <img class="testimonial_image" src="images/Person2.png" alt="Photo of a smiling, happy customer.">
+    <p><span >Rebecca Flex.</span> CEO at Company.</p>
+    <p>William Alvin is a true proffesional who will go out of his way to make his customers happy. Will definitely come back for his services.</p>
+</div>
+
+
+<div class="testimonial">
+    <img class="testimonial_image" src="images/Person3.png" alt="Picture of a young man reminiscing and contemplating.">
+    <p><span >Benedetto Mariano</span>Student at University of Florence</p>
+    <p>I will never forget the day when power couple Brangelina attended my birthday party.</p>
+</div>
+
 </body>
 </html>
