Update Testimonials, need to fix that they have weird sizes on large screen

--- a/index.html
+++ b/index.html
@@ -10,36 +10,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<section class="testimonials_container">
-    <h1>Testimonials</h1>
-    <div class="testimonial">
-        <img class="testimonial_image" src="images/Person1.png" alt="Picture of a girl smiling behind a watermelon">
-        <h2 class="testimonial_signature">Chris Fox.</h2>
-        <p class="testimonial_company">CEO at Mighty Schools.</p>
-        <blockquote class="testimonial_quote">William knocked it out of the park with his performance at our last event.
-            Some of our clients actually think they got to meet the real deal and our sales has skyrocketed since.
-        </blockquote>
-    </div>
+<div class="card">
+    <header class="card__header">Card Title</header>
+    <div class="card__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, voluptatum.</div>
+</div>
 
-    <div class="testimonial">
-        <img class="testimonial_image" src="images/Person2.png" alt="Photo of a smiling, happy customer.">
-        <h2 class="testimonial_signature">Rebecca Flex.</h2>
-        <p class="testimonial_company">CEO at Company.</p>
-        <blockquote class="testimonial_quote">William Alvin is a true professional who will go out of his way to make
-            his customers happy. Will definitely come back for his services.
-        </blockquote>
-    </div>
-
-
-    <div class="testimonial">
-        <img class="testimonial_image" src="images/Person3.png"
-             alt="Picture of a young man reminiscing and contemplating.">
-        <h2 class="testimonial_signature">Benedetto Mariano</h2>
-        <p class="testimonial_company">Student at University of Florence</p>
-        <blockquote class="testimonial_quote">I will never forget the day when power couple Brangelina attended my
-            birthday party.
-        </blockquote>
-    </div>
-</section>
 </body>
 </html>
