--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="card">
-    <header class="card__header">Card Title</header>
-    <div class="card__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, voluptatum.</div>
+
+<div class="card testimonial">
+    <div class="grid grid--1x2">
+        <img class="testimonial__image" src="images/Person1.png" alt="Picture of a girl smiling behind a watermelon">
+        <span class="testimonial">
+        <blockquote class="testimonial__quote">William knocked it out of the park with his performance at our last event.Some of our clients actually think they got to meet the real deal and our sales has skyrocketed since.</blockquote>
+            <div class="testimonial--signature">
+                <h2 class="testimonial__person">Chris Fox</h2>
+                <h3 class="testimonial__company">CEO at Mighty Schools.</h3>
+            </div>
+        </span>
+
+    </div>
+
 </div>
 
 </body>
