update footer and clean up some of the code.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,120 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
 
+    <meta name="description" content="The Curriculum Vitae of Celebrity Impersonator William Alvin">
+    <meta name="keywords" content="Actor, Celebrity Impersonator, Brad Pitt Look-a-like">
+    <meta name="author" content="William Alvin">
+
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Work+Sans&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
-<div class="card">
+<div class="banner">
+    <h1 class="banner__heading">William Alvin</h1>
+    <p class="banner__body">Celebrity Impersonator</p>
+</div>
+<main>
 
-    <div class="card__header">Films</div>
+    <div class="card">
+        <div class="article__grid--1x2">
 
-    <div class="card__body"></div>
+            <div class="image--container"><img class="image--bio" src="images/hollywood1.jpg"
+                                               alt="Picture of the iconic Hollywood Sign"></div>
+            <article id="biography">
+                <h1>
+                    Your Look-a-like for hire!
+                </h1>
+                <p>Prepare for plenty of double takes at your event when you hire me as your incredible Brad
+                    Pitt lookalike. I am bearing a striking resemblance to the Hollywood film star and is certain to be
+                    the
+                    highlight of your function as I mix and mingle with guests, adding glamour and sophistication to all
+                    occasions.</p>
+                <p>I have over 10 years experience performing as Brad Pitt, and is guaranteed to make your event
+                    unforgettable
+                    thanks to my uncanny likeness to the star of movies such as ‘Fight Club’, ‘Inglourious Basterds’,
+                    ‘Ocean’s
+                    Eleven’, and ‘The Curious Case of Benjamin Button’.</p>
+
+                <p>I am able to perform solo or with other celebrity impersonators, including Angelina Jolie lookalikes
+                    in
+                    order
+                    to bring you Hollywood power couple Brangelina. Ideal for themed events, parties, meet and greets,
+                    corporate
+                    functions, ceremonies and more, enquire today about bringing this fantastic lookalike to your event.
+                </p>
+            </article>
+        </div>
+
+
+        <div class="article__grid--1x2">
+
+            <section id="skills">
+                <h1>
+                    Skills
+                </h1>
+
+                <ul>
+                    <li>Voice Trained</li>
+                    <li>Stage Combat Skills</li>
+                    <li>Stanislavski’s Acting Method</li>
+                    <li>Excellent Communication Skills</li>
+                    <li>Modern Dance</li>
+                    <li>Collaboration Skills</li>
+                    <li>International Drivers License</li>
+                    <li>Guitar (Campfire Level)</li>
+
+                </ul>
+
+
+            </section>
+
+            <div class="image--container"><img class="image--skills" src="images/movieset.jpg"
+                                               alt="Blurry picture of a movie set"></div>
+
+        </div>
+
+
+    </div>
+
+
+    </div>
+    <div class="card">
+        <div class="card__header">Training</div>
+        <div class="card__body"></div>
+        <table id="training">
+            <tr>
+                <td>2014-2017</td>
+                <td>Au Pair in Los Angeles</td>
+                <td>Various A-list Families
+                </td>
+            </tr>
+            <tr>
+                <td>2012-2014</td>
+                <td>Post Graduate Diploma in Acting</td>
+                <td>Hillview Theatre School</td>
+            </tr>
+            <tr>
+                <td>2011-2012</td>
+                <td>Improv Acting Course</td>
+                <td>University of Slough, UK</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="card">
+        <div class="card__header">Films</div>
+        <div class="card__body"></div>
         <table id="films">
             <tr>
-                <td>The Beggar and the Thief (2019)</td>
-                <td>Lead (Ian)</td>
+                <td>Law & Order in Space (2019)</td>
+                <td>Supporting (Ian)</td>
                 <td>Universial Pictures</td>
             </tr>
             <tr>
@@ -37,11 +136,104 @@
             <tr>
                 <td>Protein Pro (2002)</td>
                 <td>Co-presenter</td>
-                <td>TV-Shop</td>
+                <td>TV-Shop UK</td>
             </tr>
         </table>
-    </div.>
+    </div>
+
+
+    <div class="card">
+        <div class="card__header">Theatre</div>
+        <div class="card__body"></div>
+        <table id="tv">
+            <tr>
+                <td>Hansel & Gretel – Panto (2012)</td>
+                <td>Dancer</td>
+                <td>Theatre Royal, York</td>
+            </tr>
+            <tr>
+                <td>Phantom of the Opera (2009)</td>
+                <td>Benjamin (Lead)</td>
+                <td>Erwin Aldwych Theatre, Glasgow</td>
+            </tr>
+            <tr>
+                <td>To Brad or not to Brad (2008)</td>
+                <td>Monolog</td>
+                <td>Seven Bells Pub, London
+                </td>
+            </tr>
+        </table>
+    </div>
+
+
+    <div class="grid grid--1x3">
+        <div class="card testimonial">
+            <div class="grid grid--1x2 grid--inner">
+                <img class="testimonial__image" src="images/Person1.png"
+                     alt="Picture of a girl smiling behind a watermelon">
+                <span class="testimonial testimonial--container">
+        <blockquote class="testimonial__quote">William knocked it out of the park with his performance at our last event. Some of our clients actually think they got to meet the real deal and our sales have skyrocketed since.</blockquote>
+            <div class="testimonial--signature">
+                <h2 class="testimonial__person">Jesse Lydian</h2>
+                <h3 class="testimonial__company">CEO at Mighty Schools.</h3>
+            </div>
+        </span>
+
+            </div>
+
+        </div>
+
+        <div class="card testimonial">
+            <div class="grid grid--1x2 grid--inner">
+                <img class="testimonial__image" src="images/Person2.png"
+                     alt="Picture of a girl smiling behind a watermelon">
+                <span class="testimonial testimonial--container">
+        <blockquote class="testimonial__quote">William Alvin is a true professional who will go out of his way to
+                make
+                his customers happy. Will definitely come back for his services.</blockquote>
+            <div class="testimonial--signature">
+                <h2 class="testimonial__person">Rebecca Flexbox</h2>
+                <h3 class="testimonial__company">CEO at Company</h3>
+            </div>
+        </span>
+
+            </div>
+
+        </div>
+
+        <div class="card testimonial">
+            <div class="grid grid--1x2 grid--inner">
+                <img class="testimonial__image" src="images/Person3.png"
+                     alt="Picture of a girl smiling behind a watermelon">
+                <span class="testimonial testimonial--container">
+        <blockquote class="testimonial__quote">I will never forget the day when power couple Brangelina attended my
+            birthday party.</blockquote>
+            <div class="testimonial--signature">
+                <h2 class="testimonial__person">Benedetto Mariano</h2>
+                <h3 class="testimonial__company">Student at University of Florence</h3>
+            </div>
+        </span>
+
+            </div>
+
+        </div>
+
+    </div>
+
+
+</main>
+
+<div class="footer">
+<h1>Get in touch!</h1>
+    <div class="footer_links">
+        <a href="#">Instagram</a>
+        <a href="#">Twitter</a>
+        <a href="#">Imdb</a></div>
+<p>123, High Street, Euston E1 234 | Email: w.alvin123@hotmail.com | Website: www.shapeshifter-celebs.com
+    Agent: Super Acting Agency, The Street, London N1 2DY | superactingagency@aol.com | 0121 123456</p>
 </div>
+
+
 
 </body>
 </html>
