update img alt text

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
     </div>
 
 
-    </div>
     <div class="card">
         <div class="card__header">Training</div>
         <div class="card__body"></div>
@@ -145,7 +144,7 @@
     <div class="card">
         <div class="card__header">Theatre</div>
         <div class="card__body"></div>
-        <table id="tv">
+        <table id="theatre">
             <tr>
                 <td>Hansel & Gretel – Panto (2012)</td>
                 <td>Dancer</td>
@@ -172,7 +171,7 @@
                 <img class="testimonial__image" src="images/Person1.png"
                      alt="Picture of a girl smiling behind a watermelon">
                 <span class="testimonial testimonial--container">
-        <blockquote class="testimonial__quote">William knocked it out of the park with his performance at our last event. Some of our clients actually think they got to meet the real deal and our sales have skyrocketed since.</blockquote>
+        <q class="testimonial__quote">William knocked it out of the park with his performance at our last event. Some of our clients actually think they got to meet the real deal and our sales have skyrocketed since.</q>
             <div class="testimonial--signature">
                 <h2 class="testimonial__person">Jesse Lydian</h2>
                 <h3 class="testimonial__company">CEO at Mighty Schools.</h3>
@@ -186,11 +185,11 @@
         <div class="card testimonial">
             <div class="grid grid--1x2 grid--inner">
                 <img class="testimonial__image" src="images/Person2.png"
-                     alt="Picture of a girl smiling behind a watermelon">
+                     alt="Picture of a smiling, happy customer.">
                 <span class="testimonial testimonial--container">
-        <blockquote class="testimonial__quote">William Alvin is a true professional who will go out of his way to
+        <q class="testimonial__quote">William Alvin is a true professional who will go out of his way to
                 make
-                his customers happy. Will definitely come back for his services.</blockquote>
+                his customers happy. Will definitely come back for his services.</q>
             <div class="testimonial--signature">
                 <h2 class="testimonial__person">Rebecca Flexbox</h2>
                 <h3 class="testimonial__company">CEO at Company</h3>
@@ -204,10 +203,10 @@
         <div class="card testimonial">
             <div class="grid grid--1x2 grid--inner">
                 <img class="testimonial__image" src="images/Person3.png"
-                     alt="Picture of a girl smiling behind a watermelon">
+                     alt="Picture of a young man reminiscing and contemplating">
                 <span class="testimonial testimonial--container">
-        <blockquote class="testimonial__quote">I will never forget the day when power couple Brangelina attended my
-            birthday party.</blockquote>
+        <q class="testimonial__quote">I will never forget the day when power couple Brangelina attended my
+            birthday party.</q>
             <div class="testimonial--signature">
                 <h2 class="testimonial__person">Benedetto Mariano</h2>
                 <h3 class="testimonial__company">Student at University of Florence</h3>
