compress large images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="card">
         <div class="article__grid--1x2">
 
-            <div class="image--container"><img class="image--bio" src="images/hollywood1.jpg"
+            <div class="image--container"><img class="image--bio" src="images/hollywood1.jpeg"
                                                alt="Picture of the iconic Hollywood Sign"></div>
             <article id="biography">
                 <h1>
@@ -79,7 +79,7 @@
 
             </section>
 
-            <div class="image--container"><img class="image--skills" src="images/movieset.jpg"
+            <div class="image--container"><img class="image--skills" src="images/movieset.jpeg"
                                                alt="Blurry picture of a movie set"></div>
 
         </div>
