--- a/index.html
+++ b/index.html
@@ -170,13 +170,14 @@
             <div class="grid grid--1x2 grid--inner">
                 <img class="testimonial__image" src="images/Person1.png"
                      alt="Picture of a girl smiling behind a watermelon">
-                <span class="testimonial testimonial--container">
+                <div class="testimonial testimonial--container">
         <q class="testimonial__quote">William knocked it out of the park with his performance at our last event. Some of our clients actually think they got to meet the real deal and our sales have skyrocketed since.</q>
+
             <div class="testimonial--signature">
                 <h2 class="testimonial__person">Jesse Lydian</h2>
                 <h3 class="testimonial__company">CEO at Mighty Schools.</h3>
             </div>
-        </span>
+        </div>
 
             </div>
 
@@ -186,7 +187,7 @@
             <div class="grid grid--1x2 grid--inner">
                 <img class="testimonial__image" src="images/Person2.png"
                      alt="Picture of a smiling, happy customer.">
-                <span class="testimonial testimonial--container">
+                <div class="testimonial testimonial--container">
         <q class="testimonial__quote">William Alvin is a true professional who will go out of his way to
                 make
                 his customers happy. Will definitely come back for his services.</q>
@@ -194,7 +195,7 @@
                 <h2 class="testimonial__person">Rebecca Flexbox</h2>
                 <h3 class="testimonial__company">CEO at Company</h3>
             </div>
-        </span>
+        </div>
 
             </div>
 
@@ -204,14 +205,14 @@
             <div class="grid grid--1x2 grid--inner">
                 <img class="testimonial__image" src="images/Person3.png"
                      alt="Picture of a young man reminiscing and contemplating">
-                <span class="testimonial testimonial--container">
+                <div class="testimonial testimonial--container">
         <q class="testimonial__quote">I will never forget the day when power couple Brangelina attended my
             birthday party.</q>
             <div class="testimonial--signature">
                 <h2 class="testimonial__person">Benedetto Mariano</h2>
                 <h3 class="testimonial__company">Student at University of Florence</h3>
             </div>
-        </span>
+        </div>
 
             </div>
 
@@ -231,8 +232,6 @@
 <p>123, High Street, Euston E1 234 | Email: w.alvin123@hotmail.com | Website: www.shapeshifter-celebs.com
     Agent: Super Acting Agency, The Street, London N1 2DY | superactingagency@aol.com | 0121 123456</p>
 </div>
-
-
 
 </body>
 </html>
