--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Actor, Celebrity Impersonator, Brad Pitt Look-a-like">
     <meta name="author" content="William Alvin">
 
-    <title>Document</title>
+    <title>William Alvin - Resume</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Work+Sans&display=swap"
